--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -91,131 +91,6 @@ nav ul li {
     display: none;
 }
 
-.hero {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 2.5rem;
-    max-width: 100%;
-    margin: auto;
-
-    background-color: var(--secondary-color);
-}
-
-.hero img {
-    height: 37.5rem;
-    width: 37.5rem;
-}
-
-.bio {
-    width: 25rem;
-    padding: 0.625rem;
-    background-color: var(--secondary-color);
-    /* border-radius: 6px;
-    box-shadow: 0px 2px 15px 2px var(--primary-shadow); */
-}
-
-.bio h2 {
-    background-color: var(--bg-color);
-    font-weight: var(--medium-font);
-    margin-bottom: var(--bottom-margin);
-
-    background-color: var(--secondary-color);
-}
-
-.bio p {
-    background-color: var(--bg-color);
-    font-weight: var(--normal-font);
-    line-height: var(--line-height);
-    padding: 0.3
-    rem 0;
-
-    background-color: var(--secondary-color);
-}
-
-.projects {
-    background-color: var(--bg-color);
-    padding: 32px 0;
-    margin-top: 2rem;
-}
-  
-.project-pic {
-    width: 100%;
-    height: 100%;
-}
-  
-.projects-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.projects-title {
-    font-weight: var(--medium-font);
-    text-align: center;
-    margin-bottom: 1rem;
-}
-  
-.project-container {
-    text-align: center;
-    width: 21.875rem;
-    padding: 1rem;
-}
-
-.project-container p {
-    padding: 0.4rem;
-}
-  
-.project-title {
-    font-weight: var(--normal-font);
-    margin-bottom: var(--bottom-margin);
-}
-  
-.project-details {
-    font-weight: var(--normal-font);
-    margin-bottom: var(--bottom-margin);
-}
-  
-.project-card {
-    background-color: var(--bg-color);
-    /* border-radius: 11px; */
-    /* box-shadow: 0 3px 10px var(--primary-shadow); */
-    padding: 20px;
-    margin: 0px;
-}
-
-.project-link {
-    padding-right: 25px;
-    padding-left: 25px;
-    border-style: solid;
-    border-radius: 25px;
-    border-color: var(--secondary-color);
-    border-width: 5px;
-    background-color: var(--secondary-color);
-    color: rgb(242, 242, 242);
-}
-
-.socials {
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    right: 1%;
-    bottom: 50%;
-}
-  
-.socicon {
-    border-radius: 100%;
-    width: 2rem;
-    height: 2rem;
-}
-
-footer {
-    background-color: var(--bg-color);
-    padding: 1.25rem;
-    text-align: center;
-    margin: 2rem 0 0;
-}
-
 .scroll-up {
     position: fixed;
     right: 0.5%;
@@ -228,8 +103,13 @@ footer {
     height: 3rem;
 }
 
-/* Media queries for responsiveness */
-@media screen and (max-width: 720px) {
+/* Media queries */
+
+@media screen and (max-width: 1200px) {
+
+}
+
+@media screen and (max-width: 768px) {
     nav {
         padding: 1.5rem 1rem;   
     }
@@ -256,71 +136,8 @@ footer {
     nav ul.show {
         transform: translateX(0);
     }
-  
-    .hero {
-        margin-top: -4rem;
-        flex-direction: column;
-        gap: 0;
-    }
-  
-    .hero img {
-        height: 37.5rem;
-        width: 30rem;
-    }
-  
-    .bio {
-        margin-top: -7rem;
-        width: 20.5rem;
-
-        margin-bottom: 2.5rem;
-    }
-  
-    .more-about {
-        margin-top: 2rem;
-        padding: 1rem 3.5rem;
-    }
-  
-    .more-about h2 {
-        text-align: center;
-    }
-  
-    .more-about p {
-        text-align: justify;
-    }
-  
-    .icon {
-        width: 5.875rem;
-        height: 5.25rem;
-    }
-  
-    .projects-container {
-        flex-direction: column;
-    }
-  
-    .project-container {
-        width: 20.875rem;
-    }
-  
-    .contact-form-container {
-        max-width: 23.75rem;
-    }
 }
   
-@media screen and (max-width: 420px) {
-    .hero img {
-        height: 37.5rem;
-        width: 23rem;
-    }
-    
-    .bio {
-        width: 18.3rem;
-    }
-    
-    .project-container {
-        width: 17.875rem;
-    }
-    
-    .contact-form-container {
-        max-width: 17.75rem;
-    }
+@media screen and (max-width: 320px) {
+
 }
