--- a/assets/projectPages/groovyAssets/groovycss/styles.css
+++ b/assets/projectPages/groovyAssets/groovycss/styles.css
@@ -8,7 +8,7 @@
   --bold-font: 800;
   --bg-color: #fcfcfc;
   --primary-color: #000000;
-  --secondary-color: #8ea9df;
+  --secondary-color: #ff00b7;
   --top-margin: 2rem;
   --bottom-margin: 2rem;
   --left-right-margin: 1rem;
