--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -117,14 +117,86 @@ nav ul li {
 .header-img-div {
     max-width: 100%;
     height: 100vh;
-    background-color: var(--secondary-color);
-} 
+    /* background-color: var(--secondary-color); */
+    border: 1px solid var(--secondary-color);
 
-.header-img {
-    padding: 0;
-    margin: 0;
-    max-width:100%;
-    max-height:100%;
+    align-items: flex-end;
+    display: flex;
+
+}
+
+.header-icons-movement {
+    width: 100%;
+    background-color: pink;
+}
+
+.header-img-div > #header-avatar { 
+    margin-left: 35%;
+    height: auto;
+    width: 30%;
+
+    z-index: 1;
+}
+
+#header-code {
+    animation: MoveUpDown 2.5s linear infinite;
+
+    position: absolute;
+    padding-bottom: 30%;
+    margin-left: 15%;
+
+    width: 15%;
+    z-index: 0;
+
+    transform: rotate(-25deg);
+}
+
+#header-design {
+    animation: MoveUpDown 2.5s linear infinite; 
+
+    position: absolute;
+    padding-bottom: 30%;
+    margin-left: 62%;
+
+    width: 15%;
+    z-index: 0;
+
+    transform: rotate(10deg);
+}
+
+#header-film {
+    animation: MoveUpDown 2.5s linear infinite;
+    
+    position: absolute;
+    padding-bottom: 10%;
+    margin-left: 68%;
+
+    width: 15%;
+    z-index: 0;
+
+    transform: rotate(5deg);
+}
+
+#header-food {
+    animation: MoveUpDown 2.5s linear infinite;
+    
+    position: absolute;
+    padding-bottom: 10%;
+    margin-left: 10%;
+
+    width: 15%;
+    z-index: 0;
+
+    transform: rotate(-10deg);
+}
+
+@keyframes MoveUpDown {
+    0%, 100% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-10px);
+    }
 }
 
 .full-header-div p{
