--- a/assets/projectPages/mistygroveAssets/mistygrovecss/styles.css
+++ b/assets/projectPages/mistygroveAssets/mistygrovecss/styles.css
@@ -2,7 +2,7 @@
 
 /* Variables */
 :root {
-  --font-family: "Jost", sans-serf;
+  /* --font-family: "Jost", sans-serf;
   --normal-font: 300; 
   --medium-font: 500;
   --bold-font: 800;
@@ -14,6 +14,15 @@
   --bottom-margin: 0.5rem;
   --bottom-margin-2: 1rem;
   --line-height: 1.7rem;
+  --transition: 0.3s; */
+
+  --font-family: "Jost", sans-serf;
+  --normal-font: 300; 
+  --medium-font: 500;
+  --bold-font: 800;
+  --bg-color: #0a0a0b;
+  --primary-color: #ebebeb;
+  --secondary-color: #ff00b7;
   --transition: 0.3s;
 }
 /* Variables end */
@@ -24,6 +33,8 @@ html {
 
 /* CSS Resets */
 * {
+  background-color: var(--bg-color);
+  color: var(--primary-color);
   margin: 0;
   padding: 0;
   box-sizing: border-box;
