update to light mode

--- a/assets/projectPages/mistygroveAssets/mistygrovecss/styles.css
+++ b/assets/projectPages/mistygroveAssets/mistygrovecss/styles.css
@@ -20,8 +20,8 @@
   --normal-font: 300; 
   --medium-font: 500;
   --bold-font: 800;
-  --bg-color: #0a0a0b;
-  --primary-color: #ebebeb;
+  --bg-color: #fdfdfd;
+  --primary-color: #0c0c0c;
   --secondary-color: #ff00b7;
   --transition: 0.3s;
 }
